--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,15 +1,18 @@
 pipeline {
-    agent any
-    stages {
-        stage('step1') {
-            steps {
-                sh 'echo étape un'
-            }
+  agent none
+
+  stages {
+    stage('Build') {
+      agent {
+        docker {
+          image 'mcr.microsoft.com/playwright:v1.57.0-noble'
+          args '--network=host'
         }
-        stage('step2') {
-            steps {
-                sh 'echo étape deux'
-            }
-        }
+      }
+      steps {
+        sh 'npm install'
+        sh 'npm run build'
+      }
     }
+  }
 }
