--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "npx vue-tsc && vite build",
     "preview": "vite preview",
     "test": "vitest run",
     "test:ui": "vitest --ui",
