--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest run",
+    "test": "vitest --reporter=html run",
     "test:e2e": "playwright test --reporter=html"
   },
   "dependencies": {
