--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,18 +1,19 @@
 FROM jenkins/jenkins:2.528.3-jdk21
 
 USER root
-RUN apt-get update && apt-get install -y \
-    lsb-release ca-certificates curl \
-    nodejs npm \
-    && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-RUN install -m 0755 -d /etc/apt/keyrings && \
-    curl -fsSL https://download.docker.com/linux/debian/gpg -o /etc/apt/keyrings/docker.asc && \
-    chmod a+r /etc/apt/keyrings/docker.asc && \
-    echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/debian $(. /etc/os-release && echo \"$VERSION_CODENAME\") stable" \
-    | tee /etc/apt/sources.list.d/docker.list > /dev/null && \
-    apt-get update && apt-get install -y docker-ce-cli && \
-    apt-get clean && rm -rf /var/lib/apt/lists/*
+# Install Docker CLI from static binaries (no apt needed)
+RUN curl -fsSL https://download.docker.com/linux/static/stable/x86_64/docker-24.0.7.tgz -o /tmp/docker.tgz && \
+    tar -xzf /tmp/docker.tgz -C /tmp && \
+    mv /tmp/docker/docker /usr/local/bin/ && \
+    rm -rf /tmp/docker /tmp/docker.tgz
+
+# Install Node.js from official binaries (no apt needed)
+RUN curl -fsSL https://nodejs.org/dist/v20.9.1/node-v20.9.1-linux-x64.tar.xz -o /tmp/node.tar.xz && \
+    tar -xJf /tmp/node.tar.xz -C /usr/local --strip-components=1 && \
+    rm /tmp/node.tar.xz
 
 USER jenkins
-RUN jenkins-plugin-cli --plugins "blueocean docker-workflow json-path-api"
+
+# Jenkins plugins
+RUN jenkins-plugin-cli --plugins blueocean docker-workflow json-path-api
