--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -1,8 +1,13 @@
+version: "3.9"
 services:
   docker:
     image: docker:dind
+    container_name: jenkins-docker
     privileged: true
     restart: always
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
     ports:
       - "2376:2376"
     volumes:
@@ -10,18 +15,24 @@ services:
       - jenkins-data:/var/jenkins_home:rw
     environment:
       - DOCKER_TLS_CERTDIR=/certs
-
+  
   jenkins:
-    build: .
+    image: jenkins/jenkins:2.528.3-jdk21  # ← Changé : pas de build
+    container_name: jenkins
+    user: root  # ← Ajouté
     restart: always
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
     ports:
       - "8080:8080"
       - "50000:50000"
     volumes:
       - jenkins-data:/var/jenkins_home:rw
       - jenkins-docker-certs:/certs/client:ro
+      - /var/run/docker.sock:/var/run/docker.sock  # ← Ajouté pour Docker
     environment:
-      - JAVA_OPTS="-Dhudson.model.DirectoryBrowserSupport.CSP="
+      - JAVA_OPTS=-Dhudson.model.DirectoryBrowserSupport.CSP=
       - DOCKER_HOST=tcp://docker:2376
       - DOCKER_CERT_PATH=/certs/client
       - DOCKER_TLS_VERIFY=1
