--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
+    "@types/node": "^25.2.2",
     "@vitejs/plugin-vue": "^5.0.0",
     "@vitest/ui": "^4.0.18",
     "@vue/test-utils": "^2.4.0",
