--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   jenkins-docker:
     image: docker:dind
@@ -17,9 +16,9 @@ services:
       - DOCKER_TLS_CERTDIR=/certs
   
   jenkins:
-    image: jenkins/jenkins:2.528.3-jdk21  # ← Changé : pas de build
+    image: jenkins/jenkins:2.528.3-jdk21
     container_name: jenkins
-    user: root  # ← Ajouté
+    user: root
     restart: always
     dns:
       - 8.8.8.8
@@ -30,13 +29,13 @@ services:
     volumes:
       - jenkins-data:/var/jenkins_home:rw
       - jenkins-docker-certs:/certs/client:ro
-      - /var/run/docker.sock:/var/run/docker.sock  # ← Ajouté pour Docker
+      - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - JAVA_OPTS=-Dhudson.model.DirectoryBrowserSupport.CSP=
-      - DOCKER_HOST=tcp://docker:2376
+      - DOCKER_HOST=tcp://jenkins-docker:2376
       - DOCKER_CERT_PATH=/certs/client
       - DOCKER_TLS_VERIFY=1
 
 volumes:
   jenkins-data:
-  docker-data:
+  jenkins-docker-certs:  # ← AJOUTÉ : volume manquant
